# xcorr

./: .flake8  .gitignore  CHANGELOG.rst  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  README.rst  ccf.yml  conda_env.yml  conda_env_old.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  xcorr.yml
ccf/: __init__.py  clients.py  core.py  datafetch.py  helpers.py  process.py  utils.py
ccf/cc/: __init__.py  cc.py
ccf/clients/: __init__.py  clients.py  datafetch.py
ccf/core/: __init__.py  core.py
ccf/postprocess/: __init__.py  spectrogram.py  stack.py  util.py
ccf/preprocess/: __init__.py  operations.py  running_rms.py
ccf/util/: __init__.py  hasher.py  receiver.py  time.py
ccf/utils/: __init__.py  receiver.py
examples/: CC analysis.ipynb  HA response correction.ipynb  Monowai.xml  xcorr analysis.ipynb  xcorr cc.ipynb  xcorr client.ipynb  xcorr dask.ipynb  xcorr merge.ipynb
examples/client/: client.py  verify.py
examples/core/: README.rst  postprocess.py  process.py
examples/correlate/: README.rst  correlate.py
examples/lazy/: README.rst  lazy_availability.py  lazy_preprocessing.py  lazy_process.py  lazy_psd.py  lazy_snr.py  mfread.py  run_lazy_availability.sh  run_lazy_preprocessing.sh  run_lazy_process.sh
examples/merge/: merge.py
examples/mfread/: README.rst  mfread.py
examples/notebooks/: CC scheme.ipynb
examples/signal/: README.rst  signal.py
examples/stream/: README.rst  client.py  operations.py
notebooks/: CC analysis.ipynb  CC scheme.ipynb  Monowai.xml  Monowai_EDH_BHZ.xml
scripts/: MVC_CC.py  MVC_CC_2015.py  MVC_CC_BHZ.py  MVC_CC_H03.py  MVC_CC_H10.py  MVC_CC_H10_2015.py  README.rst  cc.py  dask_delayed.py  dask_delayed_v2.py  dask_example.py  lazy_process_example.py  process.sh  process_dask.py  process_dask_delayed.sh  profile.html  psd.py  psdcorr.py  run_dask_examply.sh  run_lazy_process_example.sh  snr.py  timelapse.py
tests/: test_cc.py  test_clients.py  test_core.py  test_preprocess.py  test_signal.py  test_util.py
xcorr/: __init__.py  client.py  version.py
xcorr/cc/: __init__.py  cc.py
(+83 files in other folders)
