[metadata]
name = xcorr 
description = Correlate timeseries in a self-describing N-D labelled dataset
long_description = file: README.rst
long_description_content_type = text/x-rst; charset = UTF-8
url = https://gitlab.com/psmsmets/xcorr
author = Pieter Smets
author_email = 
maintainer  = Pieter Smets
maintainer_email = mail@pietersmets.be
license = 'GNU General Public License v3 (GPLv3)'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
keywords = xcorr, correlation, cross-correlation, signal-processing, timeseries, waveforms, obspy, xarray
project_urls =
    Source = https://gitlab.com/psmsmets/xcorr.git
    Tracker = https://gitlab.com/psmsmets/xcorr/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy>=1.18
    scipy>=1.0
    obspy>=1.2
    xarray>=0.16
    pandas>=1.0
    pyproj>=2.0
    pywavelets>=1.0
    tabulate>=0.8
    tables>=3.2.3
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    xcorr-snr = xcorr.scripts.snr:main
    xcorr-plmax = xcorr.scripts.plmax:main
    xcorr-psd = xcorr.scripts.psd:main
    xcorr-ct=xcorr.scripts.ct:main
    xcorr-timelapse = xcorr.scripts.timelapse:main
    xcorr-beamform = xcorr.scripts.beamform:main
    xcorr-swresp = xcorr.scripts.swresp:main

[bdist_wheel]
universal = true

[flake8]
per-file-ignores = __init__.py: F401, F403, F821
